@@ -2,18 +2,27 @@
 
 require 'optparse'
 
-CONF_DIR = File.expand_path('~/.ssh/config.d')
-SSH_CONFIG = File.expand_path('~/.ssh/config')
 MAGIC_LINE = "# Generated by #{File.basename(__FILE__)}"
 
-options = {:verbose => false, :with => []}
+options = {
+  :ssh_config => File.expand_path('~/.ssh/config'),
+  :verbose => false,
+  :with => [],
+  :dir => File.expand_path('~/.ssh/config.d')
+}
 
 optparse = OptionParser.new do|opts|
   opts.on('-h', '--help', 'Display this screen') do
     puts opts
     exit
   end
-  opts.on('-v', '--verbose', 'Be verbose') do |file|
+  opts.on('-d', '--dir DIR', '') do |dir|
+    options[:dir] = File.expand_path(dir)
+  end
+  opts.on('-o', '--output FILE', '') do |file|
+    options[:ssh_config] = file
+  end
+  opts.on('-v', '--verbose', 'Be verbose') do
     options[:verbose] = true
   end
   opts.on('-w', '--with CONFIG', 'Include an otherwise disabled config file') do |file|
@@ -23,30 +32,33 @@ optparse = OptionParser.new do|opts|
 end
 optparse.parse!
 
-if !File.directory?(CONF_DIR)
-  puts "#{CONF_DIR} does not exist or is not a directory"
+if !File.directory?(options[:dir])
+  puts "#{options[:dir]} does not exist or is not a directory"
   Process.exit!(1)
 end
 
-if File.exists?(SSH_CONFIG) && File.new(SSH_CONFIG).gets == "#{MAGIC_LINE}\n"
-  puts "Found generated ssh_config under #{SSH_CONFIG}. Overwriting..."
-elsif File.exists?(SSH_CONFIG)
-  puts "Found hand-crafted ssh_config under #{SSH_CONFIG}. Please move it out of the way."
+if File.exists?(options[:ssh_config]) && File.new(options[:ssh_config]).gets == "#{MAGIC_LINE}\n"
+  puts "Found generated ssh_config under #{options[:ssh_config]}. Overwriting..."
+elsif File.exists?(options[:ssh_config])
+  puts "Found hand-crafted ssh_config under #{options[:ssh_config]}. Please move it out of the way."
   Process.exit!(2)
 end
 
-File.open(SSH_CONFIG, 'w') do |ssh_config|
-  ssh_config.puts(MAGIC_LINE)
-  ssh_config.puts("# DO NOT EDIT THIS FILE")
-  ssh_config.puts("# Create or modify files under #{CONF_DIR}/ instead")
-end
-
-files = Dir["#{CONF_DIR}/**"].reject do |file|
+files = Dir["#{options[:dir]}/**"].reject do |file|
   file =~ /\.disabled$/ && !options[:with].include?("#{File.basename(file, '.disabled')}")
 end
 
+files -= [options[:ssh_config]]
+
+entries = []
+
 files.sort.each do |file|
-  puts "Concatenating #{file}" if options[:verbose]
-  %x(/bin/cat #{file} >> #{SSH_CONFIG})
-  %x(echo >> #{SSH_CONFIG})
+  entries << File.read(file)
+end
+
+File.open(options[:ssh_config], 'w', 0600) do |ssh_config|
+  ssh_config.puts(MAGIC_LINE)
+  ssh_config.puts("# DO NOT EDIT SAID FILE")
+  ssh_config.puts("# Create or modify files under #{options[:dir]} instead")
+  ssh_config.puts(entries.join("\n"))
 end
